# pygrations

./: .gitignore  README.md  alembic.ini  pyproject.toml
migrations/versions/: 3148ad2196c8_primeira_migration.py
modelos/: pessoa.py
