[tool.poetry]
name = "pygrations"
version = "0.1.0"
description = ""
authors = ["lucianogomes02 <luciano@pontotel.com.br>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
alembic = "^1.11.1"
black = "^23.3.0"
psycopg2 = "^2.9.6"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
